- bakefile_gen uses all available CPUs by default now; use explicit -j1
  flag to get the old behavior
- autoconf: fixed shared libraries sonames on NetBSD and OpenBSD
- added limited support for conditional variables dependent on other
  conditional variables based by Francesco Montorsi (previously, only
  dependency on options was possible)
- added "debug" level to the <echo> command


Version 0.2.2
--------------

- Bakefile is now licensed under the MIT license
- Python >= 2.3 is now required to run Bakefile
- added --touch option to bakefile
- fixed isdefined() to work with conditional variables (Francesco Montorsi)
- added --dry-run option to bakefile_gen too
- added optional support for (un)installation targets in Windows
  formats (Francesco Montorsi)
- added FORMAT_SUPPORTS_{ACTIONS,SUBPROJECTS} (Francesco Montorsi)
- added initial support for MSVS2005 project files (based on heavily
  modified patch by Kevin Powell, Steven Van Ingelgem and Kevin Ollivier)
- autoconf: fixed <set-srcdir> to generate correct code when ran on Windows
- don't fail in bakefile_gen --clean if a new file or format was added
  since .bakefile_gen.state was last updated
- gnu, mingw: assign default options values using ':=' instead of '='
- added force argument to <option>'s <default-value> to make bypassing
  of the default value check possible (Francesco Montorsi)


Version 0.2.1
--------------

- better error messages in some cases (Francesco Montorsi)
- show detailed backtraces on errors
- added --always-make option to bakefile_gen (Francesco Montorsi)
- added bakefile_gen manpage (Francesco Montorsi)
- autoconf: fixed make distclean for <subproject> targets
- more improvements to the documentation (Warren Young)
- autoconf: respect the LIBS variable (Francesco Montorsi)
- added "once" property to <include> command (Francesco Montorsi)
- implemented uninstall target (Francesco Montorsi)
- added <headers> tag to targets; <headers> rule was removed from